--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.6.0",
     "react-scripts": "latest"
   },
   "scripts": {
